Address code review comments from @Zabuzard and @tj-wazei
  - refactor(XkcdRetriever): rename to XkcdService

  - doc(ChatGptService): clarify the meaning of RAG and vector store

  - XkcdService: improve fetchAllXkcdPosts method

  - XkcdCommand: do not allow more than 40KB of chat messages

Signed-off-by: Chris Sdogkos <work@chris-sdogkos.com>